strip down to minimal version
stuff can be readded as we get more details

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,105 +1,16 @@
 <footer class="center tc f6">
   <div class="w-100 tc pt3">
-    <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor">Sponsors</h4>
-    <div class="dt center pt3 pb4">
-      <div class="dt-row pa3 pa2-ns">
-        <div class="dtc-ns w-100 center w-50-ns v-mid mb0-ns mb3">
-          <div class="dt w-100">
-            <div class="dt-row">
-              <div class="dtc w-50 center v-mid">
-                <a id="aws-sponsor-website" class="no-underline pointer db w-40 center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
-                  <img class="grow" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
-                </a>
-              </div>
-              <div class="dtc w-50 center v-mid">
-                <a id="google-sponsor-website" class="no-underline pointer db w-80" href="https://cloud.google.com" target="_blank" title="Google Cloud">
-                  <img class="grow" src="/imgs/google-cloud.svg" alt="Google Cloud" title="Google Cloud" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="dtc-ns w-100 w-50-ns v-mid">
-          <div class="dt w-100">
-            <div class="dt-row">
-
-              <div class="dtc w-30 center v-mid">
-                <a id="microsoft-sponsor-website" class="no-underline pointer db" href="https://azure.microsoft.com" target="_blank" title="Microsoft">
-                  <img class="grow" src="/imgs/microsoft.svg" alt="Microsoft" title="Microsoft" />
-                </a>
-              </div>
-
-              <div class="dtc w-30 center v-mid pa3">
-                <a id="linkme-sponsor-website" class="no-underline pointer db" href="http://linkme.it" target="_blank" title="LinkMe">
-                  <img class="grow" src="/imgs/linkme.svg" alt="LinkMe" title="LinkMe" />
-                </a>
-              </div>
-
-              <div class="dtc w-30 center v-mid pa3">
-                <a id="azatech-sponsor-website" class="no-underline pointer db" href="http://www.azatec.com" target="_blank" title="Azatec Consulting">
-                  <img class="grow" src="/imgs/azatec.svg" alt="Azatec Consulting" title="Azatec Consulting" />
-                </a>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="dt w-100">
-
-            <div class="dt-row">
-
-              <div class="dtc w-30 center v-mid pa1">
-                <a id="cloudacademy-sponsor-website" class="no-underline pointer db" href="http://cloudacademy.com" target="_blank" title="Cloud Academy">
-                  <img class="grow" src="/imgs/cloudacademy.svg" alt="Cloud Academy" title="Cloud Academy"/>
-                </a>
-              </div>
-
-              <div class="dtc w-30 center v-mid pa3">
-                <a id="digital-attitude-sponsor-website" class="no-underline pointer db w-90 center" href="https://www.digitalattitude.tech" target="_blank" title="Digital Attitude">
-                  <img class="grow" src="/imgs/digital-attitude.jpg" alt="Digital Attitude" title="Digital Attitude"/>
-                </a>
-              </div>
-
-              <div class="dtc w-30 v-mid pa3">
-                <a id="cloud-alliance-sponsor-website" class="no-underline pointer db w-90 center" href="http://cloud-alliance.it" target="_blank" title="Cloud Alliance">
-                  <img class="grow" src="/imgs/cloud-alliance.png" alt="Cloud Alliance" title="Cloud Alliance" />
-                </a>
-              </div>
-
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-  <div class="w-100 pt3 pb6 mt2 it-green-bg white-90 center">
+  <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
-      <div class="fl mw5-ns mh6">
-          <p onclick="changePage('home')" data-page="home" class="nav-link fw1 shadow-hover underline-hover tl mv0">Home</p> 
-
-          <p onclick="changePage('agenda')" data-page="agenda" class="nav-link fw1 shadow-hover underline-hover tl mv1" data-lang="Programma">Agenda</p>
-          <p onclick="changePage('speakers')" data-page="speakers" class="nav-link fw1 shadow-hover underline-hover tl mv1" data-lang="Speaker">Speakers</p>
-          <p onclick="changePage('venue')" data-page="venue" class="nav-link fw1 shadow-hover underline-hover tl mv1" data-lang="Dove">Venue</p>
-          <p onclick="changePage('diversity')" data-page="diversity" class="nav-link fw1 shadow-hover underline-hover tl mv1">Diversity</p>
-          <p onclick="changePage('tickets')" data-page="tickets" class="nav-link fw1 shadow-hover underline-hover tl mv1" data-lang="Biglietti">Tickets</p> 
-      </div>
       <div class="fl mw5-ns ml6">
-          <p class="fw6 tl mv0 white pointer underline-hover nav-link" data-page="venue" onclick="changePage('venue')">Grand Visconti Palace</p>
-          <p class="fw1 tl mv1">Viale Isonzo, 14</p>
-          <p class="fw1 tl mv1" data-lang="Milano">Milan</p>
-          <p class="fw1 tl mv0">Italy</p>
-      </div>
-      <div class="fl mw5-ns ml6">
-          <p class="fw6 tl mv0 white" data-lang="29 Settembre 2017">29 September 2017</p>
+          <p class="fw6 tl mv0 white">February 16th</p>
           <p class="fw1 tl mv1">
             <span data-lang="In collaborazione con">In collaboration with</span>
-            <a id="serverless-italy-meetup" href="https://www.meetup.com/Serverless-Italy/" title="Serverless Italy Meetup" target="_blank" class="fw5 white">Serverless Italy</a>
+            <a id="serverless-hamburg-meetup" href="https://www.meetup.com/Serverless-Hamburg/" title="Serverless Hamburg Meetup" target="_blank" class="fw5 white">Serverless Hamburg</a>
           </p>
           <p class="fw1 tl mv0">
             <span data-lang="Scrivici a">Email us at</span>
-            <a id="jeffconf-milano-email-footer" class="fw1 tl mt0 mb1 fw5 white" href="mailto:milan@jeffconf.com">milan@jeffconf.com</a>
+            <a id="jeffconf-milano-email-footer" class="fw1 tl mt0 mb1 fw5 white" href="mailto:hamburg@jeffconf.com">hamburg@jeffconf.com</a>
           </p>
           <p class="tl">
               <a href="https://twitter.com/jeffconf" class="twitter-follow-button" data-show-count="false" data-link-color="#000000" data-text-color="#000000">Follow @jeffconf</a>
@@ -109,7 +20,7 @@
     </div>
   </div>
 
-  <div class="f6 fw1 w-100 pt1 it-green-bg white-90 pb1">
+  <div class="f6 fw1 w-100 pt1 hamburg-red-bg white-90 pb1">
     <p>
     Copyright &#169; JeffConf 2017
     </p>
