--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JeffConf Milano 2017</title>
+    <title>JeffConf Hamburg 2018</title>
     <meta charset="utf-8" />
     <meta property="og:title" content="JeffConf Milano 2017" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Sep 29th 2017 at Grand Visconti Palace, Milan" />
+    <meta property="og:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg" />
     <meta property="og:url" content="https://milan.jeffconf.com" />
     <meta property="og:image" content="https://milan.jeffconf.com/imgs/jeff-italy.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@JeffConf"/>
     <meta name="twitter:title" content="JeffConf Milano 2017"/>
-    <meta name="twitter:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Sep 29th 2017 at Grand Visconti Palace, Milan"/>
+    <meta name="twitter:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg"/>
     <meta name="twitter:creator" content="@JeffConf"/>
     <meta name="twitter:image" content="https://milan.jeffconf.com/imgs/jeff-italy.png"/>
     <meta name="twitter:image:src" content="https://milan.jeffconf.com/imgs/jeff-italy.png"/>
     <meta name="twitter:domain" content="milan.jeffconf.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Sep 29th 2017 at Grand Visconti Palace, Milan"/>
+    <meta name="description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#DC002B" />
@@ -54,11 +54,11 @@
         min-height: 180px;
     }
 
-    .it-green-bg {
-        background-color: rgb(0, 146, 70);
+    .hamburg-red-bg {
+        background-color: rgb(239, 65, 61);
     }
 
-    .it-white-bg {
+    .hamburg-white-bg {
         background-color: rgb(241, 242, 241);
     }
 
@@ -96,26 +96,9 @@
       
     <div id="contentBody" class="dt w-100 mw8-l mw7-m ph2 ph0-ns center mt3 sans-serif">
       @@include('./home.html')
-      @@include('./agenda.html')
-      @@include('./speakers.html')
-      @@include('./venue.html')
-      @@include('./diversity.html')
-      @@include('./coc.html')
-      @@include('./tickets.html')
     </div>
 
     @@include('./footer.html')
-
-    <div class="lang-switch-container">
-      <span class="lang-switch-link lang-it underline-hover pointer" onclick="changeLanguage('it')">
-        @@include('./icon-it.html')
-        <!--<img class="grow shadow-4" src="/imgs/flag-it.png" title="Italiano" alt="IT" width="20" height="20" />-->
-      </span>
-      <span class="lang-switch-link lang-en underline-hover pointer" onclick="changeLanguage('en')">
-        @@include('./icon-en.html')
-        <!--<img class="grow shadow-4" src="/imgs/flag-en.png" title="English" alt="EN" width="20" height="20" />-->
-      </span>
-    </div>
 
     <script type="text/javascript" src="/jeff.js"></script>
     <script>
@@ -123,7 +106,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-104417427-1', 'auto');
+      ga('create', 'UA-1', 'auto');
     </script>
 
   </body>
