rename remaining milano occurences to hamburg

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,21 +3,21 @@
   <head>
     <title>JeffConf Hamburg 2018</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="JeffConf Milano 2017" />
+    <meta property="og:title" content="JeffConf Hamburg 2018" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg" />
+    <meta property="og:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2018 in Hamburg" />
     <meta property="og:url" content="https://milan.jeffconf.com" />
     <meta property="og:image" content="https://milan.jeffconf.com/imgs/jeff-italy.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@JeffConf"/>
-    <meta name="twitter:title" content="JeffConf Milano 2017"/>
-    <meta name="twitter:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg"/>
+    <meta name="twitter:title" content="JeffConf Hamburg 2018"/>
+    <meta name="twitter:description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2018 in Hamburg"/>
     <meta name="twitter:creator" content="@JeffConf"/>
     <meta name="twitter:image" content="https://milan.jeffconf.com/imgs/jeff-italy.png"/>
     <meta name="twitter:image:src" content="https://milan.jeffconf.com/imgs/jeff-italy.png"/>
     <meta name="twitter:domain" content="milan.jeffconf.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2017 in Hamburg"/>
+    <meta name="description" content="A community based conference focusing on Jeff-(Serverless-)based platforms and technologies. Feb 16th 2018 in Hamburg"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#DC002B" />
@@ -71,7 +71,7 @@
     }
 
     .header-img {
-        background-image: url("/imgs/milano.jpg");
+        background-image: url("/imgs/hamburg.jpg");
     }
 
     iframe#eventbrite {
