--- a/src/views/header.html
+++ b/src/views/header.html
@@ -2,8 +2,8 @@
   <div class="dt w-100 vh-30 center cover">
     <div class="dtc"> 
       <div class="tc-ns mt2 mt3-ns ph3">
-        <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Milano 2017</h1>
-        <img src="/imgs/jeffconf-italy.png" title="JeffConf Milano" alt="JeffConf Milano" />
+        <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Hamburg 2018</h1>
+        <img src="/imgs/jeffconf-italy.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
       </div>
     </div>
   </div> 
