--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,7 +5,7 @@
       <p class="mw7-ns center"
         data-lang="In collaborazione con il Serverless Italy Meetup, JeffConf è una conferenza che si concentra sul valore dato dall’utilizzo di piattaforme serverless, senza soffermarsi solo sulla parola «Serverless»."
       >
-        A collaboration in conjunction with the Serverless Hamburg Meetup. JeffConf is an attempt to move past the word Serverless, and focus on the use of these platforms and the value they provide. Stay tuned and subscribe to our newsletter!
+        A collaboration in conjunction with the Serverless Hamburg Meetup. JeffConf is an attempt to move past the word Serverless, and focus on the use of these platforms and the value they provide.
       </p>
     </div>
     <div>
@@ -18,7 +18,7 @@
       <div id="mc_embed_signup">
         <form action="https://superluminar.us17.list-manage.com/subscribe/post?u=1850848feb35c80ecb5a4a6b8&amp;id=0fad9cde9b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-            <label for="mce-EMAIL">Subscribe to our JeffConf Hamburg mailing list</label>
+            <label for="mce-EMAIL">Stay tuned and subscribe to our newsletter!</label>
             <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1850848feb35c80ecb5a4a6b8_0fad9cde9b" tabindex="-1" value=""></div>
