--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,7 +5,7 @@
       <p class="mw7-ns center"
         data-lang="In collaborazione con il Serverless Italy Meetup, JeffConf è una conferenza che si concentra sul valore dato dall’utilizzo di piattaforme serverless, senza soffermarsi solo sulla parola «Serverless»."
       >
-        A collaboration in conjunction with the Serverless Hamburg Meetup. JeffConf is an attempt to move past the word Serverless, and focus on the use of these platforms and the value they provide.
+        A collaboration in conjunction with the Serverless Hamburg Meetup, JeffConf is an attempt to move past the word Serverless, and focus on the use of these platforms and the value they provide.
       </p>
     </div>
     <div>
