'de-italize' jeffs

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -3,7 +3,7 @@
     <div class="dtc"> 
       <div class="tc-ns mt2 mt3-ns ph3">
         <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Hamburg 2018</h1>
-        <img src="/imgs/jeffconf-italy.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
+        <img src="/imgs/jeffconf-hamburg.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
       </div>
     </div>
   </div> 
