--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -22,7 +22,7 @@
 
   <div class="f6 fw1 w-100 pt1 hamburg-red-bg white-90 pb1">
     <p>
-    Copyright &#169; JeffConf 2017
+        Copyright &#169; JeffConf 2017 | <span onclick="changePage('imprint')" data-page="imprint" class="pointer underline-hover">Imprint</span>
     </p>
   </div>
 
