--- a/src/views/index.html
+++ b/src/views/index.html
@@ -96,6 +96,7 @@
       
     <div id="contentBody" class="dt w-100 mw8-l mw7-m ph2 ph0-ns center mt3 sans-serif">
       @@include('./home.html')
+      @@include('./imprint.html')
     </div>
 
     @@include('./footer.html')
