display initial hamburg mood image

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,12 +1,16 @@
 <header class="sans-serif navy">
-  <div class="dt w-100 vh-30 center cover">
-    <div class="dtc"> 
+  <div class="dt w-100 vh-50 center cover header-img">
+    <div class="dtc">
       <div class="tc-ns mt2 mt3-ns ph3">
         <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Hamburg 2018</h1>
         <img src="/imgs/jeffconf-hamburg.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
+<!--        <div onclick="changePage('tickets')" class="tc mw4 center pv2 it-red-bg white f5 fw4 ba br2 b--transparent pointer grow shadow-hover"
+                 data-lang="Biglietti">
+              Buy Tickets
+            </div> -->
       </div>
     </div>
-  </div> 
+  </div>
   <div class="center mw6 mw7-l hamburg-red-bg pa3 tc ba b--transparent br2 header-stripe">
     <h2 class="ma0 f5 f4-l white code">Hamburg - February 16th</h2>
   </div>
