call for speakers
and workshops. readded the menu.

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,9 +1,23 @@
 <header class="sans-serif navy">
+
+  <nav class="dt w-100 mw8 center h3-ns">
+    <div class="dtc-ns dn v-mid ph3 pv1">
+      <div onclick="changePage('home')" class="tc pa1 grow-large pointer">
+        <img src="/imgs/jeff-hamburg-small.png" alt="The Hamburg Jeff" height="54" />
+      </div>
+    </div>
+    <div class="dtc v-mid tl-ns tc pa3">
+      <div onclick="changePage('home')" data-page="home" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Home</div>
+      <div onclick="changePage('call-for-speakers-workshops')" data-page="call-for-speakers-workshops" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Call for Speakers</div>
+    </div>
+  </nav>
+
   <div class="dt w-100 vh-50 center cover header-img">
     <div class="dtc">
       <div class="tc-ns mt2 mt3-ns ph3">
         <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Hamburg 2018</h1>
         <img src="/imgs/jeffconf-hamburg.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
+        <div><a href="https://www.papercall.io/cfps/751/submissions/new" class="b db tc w-30 center pv2 hamburg-red-bg white f3 fw4 ba br2 b--transparent pointer grow shadow-hover">Submit a talk or workshop proposal</a></div>
 <!--        <div onclick="changePage('tickets')" class="tc mw4 center pv2 it-red-bg white f5 fw4 ba br2 b--transparent pointer grow shadow-hover"
                  data-lang="Biglietti">
               Buy Tickets
