better fit of proposal button on mobile devices

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -17,7 +17,7 @@
       <div class="tc-ns mt2 mt3-ns ph3">
         <h1 class="dn f2 f1-l fw2 white-90 mb0 lh-title">JeffConf Hamburg 2018</h1>
         <img src="/imgs/jeffconf-hamburg.png" title="JeffConf Hamburg" alt="JeffConf Hamburg" />
-        <div><a href="https://www.papercall.io/cfps/751/submissions/new" class="b db tc w-30 center pv2 hamburg-red-bg white f3 fw4 ba br2 b--transparent pointer grow shadow-hover">Submit a talk or workshop proposal</a></div>
+        <div><a href="https://www.papercall.io/cfps/751/submissions/new" class="dib b tc mw-90 center pa2 hamburg-red-bg white f3 fw4 ba br2 b--transparent pointer grow shadow-hover">Submit a talk or workshop proposal</a></div>
 <!--        <div onclick="changePage('tickets')" class="tc mw4 center pv2 it-red-bg white f5 fw4 ba br2 b--transparent pointer grow shadow-hover"
                  data-lang="Biglietti">
               Buy Tickets
