--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,6 +5,8 @@
       <p>Serverless is a recent addition to the long list of technologies that promise to accelerate software delivery, reduce cost of compute ownership and provide unicorns and rainbows for all. And like all industry buzzwords it generates enthusiasm and scepticism in equal measure – how to move beyond the hype?</p>
 
       <p>JeffConf was born in the spirit of Paul Johnston’s <a href="https://serverless.zone/serverless-is-just-a-name-we-could-have-called-it-jeff-1958dd4c63d7">blog post</a>, “Serverless is just a name. We could have called it Jeff”, an attempt to move beyond the Serverless buzzword and focus on the practical use of function as a service platforms and the value they provide. It is a one day, community focused, single track event centred on real world Jeff (or Serverless) based solutions. It’s about fostering a community and helping all of us learn from each other as we embrace a new way of building applications.</p>
+
+      <p>JeffConf Hamburg will be the third JeffConf after London and Milan. We extend a warm welcome to attendees from the Hamburg area and beyond! Our focus is on building a community through sharing of experiences, accessible without a large commitment of time or money (tickets start from just €35).</p>
     </div>
     <div>
 
