diversity support by geekettes

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -9,6 +9,7 @@
     <div class="dtc v-mid tl-ns tc pa3">
       <div onclick="changePage('home')" data-page="home" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Home</div>
       <div onclick="changePage('call-for-speakers-workshops')" data-page="call-for-speakers-workshops" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Call for Speakers</div>
+      <div onclick="changePage('diversity')" data-page="coc" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Diversity</div>
       <div onclick="changePage('coc')" data-page="coc" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Code of Conduct</div>
     </div>
   </nav>
