correct geekettes alt text

--- a/src/views/diversity-partners.html
+++ b/src/views/diversity-partners.html
@@ -4,7 +4,7 @@
             <div class="dt w-100">
                 <div class="dt-row">
                     <div class="dtc w-50 center tc v-mid">
-                        <a id="geekettes" class="no-underline grow pa3 v-mid db mw-100" href="http://www.geekettes.io/cities/hamburg/" target="_blank" title="Geekettes Hamburg"><img class="grow db center w-50" src="/imgs/diversity-geekettes.png" alt="JS Girls" title="Geekettes Hamburg" /></a>
+                        <a id="geekettes" class="no-underline grow pa3 v-mid db mw-100" href="http://www.geekettes.io/cities/hamburg/" target="_blank" title="Geekettes Hamburg"><img class="grow db center w-50" src="/imgs/diversity-geekettes.png" alt="JS Girls" title="Geekettes Hamburgm" /></a>
                     </div>
                 </div>
             </div>
