announce venue in header

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -28,6 +28,6 @@
     </div>
   </div>
   <div class="center mw6 mw7-l hamburg-red-bg pa3 tc ba b--transparent br2 header-stripe">
-    <h2 class="ma0 f5 f4-l white code">Hamburg - February 16th</h2>
+    <h2 class="ma0 f5 f4-l white code">Hamburg - February 16th - Altonaer Museum</h2>
   </div>
 </header>
