--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,5 +1,15 @@
 <footer class="center tc f6">
   <div class="w-100 tc pt3">
+
+      <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor">Sponsors</h4>
+                          <div class="w-50 center">
+                              <a id="aws-sponsor-website" class="no-underline pointer db w-40 center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
+                                  <img class="grow" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
+                              </a>
+                          </div>
+
+
+
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
       <div class="fl mw5-ns ml6">
