superluminar GmbH organizes the JeffConf

--- a/src/views/imprint.html
+++ b/src/views/imprint.html
@@ -2,7 +2,7 @@
   <div class="tc tl-ns">
     <h3 class="black f2 fw6 tc code" data-lang="Impressum">Imprint</h3>
 
-    <p>Angaben gem&#xE4;&#xDF; &#xA7; 5 Telemediengesetz (TMG):<br>Hendric Ruesch und Soenke Ruempler GbR<br>Hohenzollernring 138<br>22763 Hamburg<br>Deutschland</p>
+    <p>Angaben gem&#xE4;&#xDF; &#xA7; 5 Telemediengesetz (TMG):<br>superluminar GmbH<br>Hohenzollernring 138<br>22763 Hamburg<br><br>Handelsregister Hamburg HRB 149058<br>Umsatzsteuer-Identifikationsnummer folgt</p>
     <p>Kontakt:<br>E-Mail: hamburg@jeffconf.com</p>
     <p>Verantwortlicher f&#xFC;r den Inhalt ist gem&#xE4;&#xDF; &#xA7; 55 Abs. 2 Rundfunkstaatsvertrag (RStV):<br>Soenke Ruempler<br>Hohenzollernring 138<br>22763 Hamburg<br>Deutschland</p>
     <p>Ausschluss der Haftung:</p>
