ticket sales dark launch

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -112,6 +112,7 @@
       @@include('./diversity.html')
       @@include('./coc.html')
       @@include('./imprint.html')
+      @@include('./tickets.html')
     </div>
 
     @@include('./footer.html')
