--- a/src/views/header.html
+++ b/src/views/header.html
@@ -12,6 +12,7 @@
       <div onclick="changePage('venue')" data-page="venue" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Venue</div>
       <div onclick="changePage('diversity')" data-page="coc" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Diversity</div>
       <div onclick="changePage('coc')" data-page="coc" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Code of Conduct</div>
+      <div onclick="changePage('tickets')" class="f5 fw4 shadow-hover no-underline white it-red-bg grow shadow-hover dib ml2 pa2 ba b--transparent br1">Tickets</div>
     </div>
   </nav>
 
