--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -12,9 +12,11 @@
                                   <img class="grow" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
                               </a>
                           </div>
-
-
-
+                          <div class="w-50 center pa3">
+                              <a id="microsoft-sponsor-website" class="no-underline pointer db w-40 center" href="https://azure.com/" target="_blank" title="microsoft">
+                                  <img class="grow" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
+                              </a>
+                          </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
       <div class="fl mw5-ns ml6">
