--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -17,6 +17,11 @@
                                   <img class="grow" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
                               </a>
                           </div>
+                          <div class="w-50 center pa3">
+                              <a id="moovel" class="no-underline pointer db w-40 center" href="https://moovel.com/" target="_blank" title="moovel">
+                                  <img class="grow" src="/imgs/moovel.png" alt="moovel" title="moovel" />
+                              </a>
+                          </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
       <div class="fl mw5-ns ml6">
