Use moovel logo with text.

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -19,7 +19,7 @@
                           </div>
                           <div class="w-50 center pa3">
                               <a id="moovel" class="no-underline pointer db w-40 center" href="https://moovel.com/" target="_blank" title="moovel">
-                                  <img class="grow" src="/imgs/moovel.png" alt="moovel" title="moovel" />
+                                  <img class="grow" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
                               </a>
                           </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
