--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,7 +1,7 @@
 <footer class="center tc f6">
   <div class="w-100 tc pt3">
 
-      <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor">Sponsors</h4>
+      <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor" id="sponsors">Sponsors</h4>
                           <div class="w-50 center pa3">
                               <a id="aws-sponsor-website" class="no-underline pointer db w-40 center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
                                   <img class="grow" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
