--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -23,7 +23,7 @@
                               </a>
                           </div>
                           <div class="w-50 center pa3">
-                              <a id="moovel" class="no-underline pointer db w-40 center" href="https://silpion.de/" target="_blank" title="silpion">
+                              <a id="silpion" class="no-underline pointer db w-40 center" href="https://silpion.de/" target="_blank" title="silpion">
                                   <img class="grow" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
                               </a>
                           </div>
