Don't shrink on mobile, reorder sponsors

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -2,27 +2,27 @@
   <div class="w-100 tc pt3">
 
       <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor" id="sponsors">Sponsors</h4>
-                          <div class="w-50 center pa3">
+                          <div class="w-50-ns center pa3">
                               <a id="aws-sponsor-website" class="no-underline pointer db w-40 center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
                                   <img class="grow" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
                               </a>
                           </div>
-                          <div class="w-50 center pa3">
-                              <a id="serverless-sponsor-website" class="no-underline pointer db w-40 center" href="https://serverless.com/" target="_blank" title="Serverless">
-                                  <img class="grow" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
-                              </a>
-                          </div>
-                          <div class="w-50 center pa3">
+                          <div class="w-50-ns center pa3">
                               <a id="microsoft-sponsor-website" class="no-underline pointer db w-40 center" href="https://azure.com/" target="_blank" title="microsoft">
                                   <img class="grow" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
                               </a>
                           </div>
-                          <div class="w-50 center pa3">
+                          <div class="w-50-ns center pa3">
                               <a id="moovel" class="no-underline pointer db w-40 center" href="https://moovel.com/" target="_blank" title="moovel">
                                   <img class="grow" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
                               </a>
                           </div>
-                          <div class="w-50 center pa3">
+                          <div class="w-50-ns center pa3">
+                              <a id="serverless-sponsor-website" class="no-underline pointer db w-40 center" href="https://serverless.com/" target="_blank" title="Serverless">
+                                  <img class="grow" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
+                              </a>
+                          </div>
+                          <div class="w-50-ns center pa3">
                               <a id="silpion" class="no-underline pointer db w-40 center" href="https://silpion.de/" target="_blank" title="silpion">
                                   <img class="grow" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
                               </a>
