sinnerschrader is a sponsor

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -27,6 +27,11 @@
                                   <img class="grow" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
                               </a>
                           </div>
+                          <div class="w-50-ns center pa3">
+                              <a id="sinnerschrader" class="no-underline pointer db w-40 center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
+                                  <img class="grow" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
+                              </a>
+                          </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
       <div class="fl mw5-ns ml6">
