make people aware that the CfP is still open, and the speakers page is not fixed

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -6,6 +6,8 @@
 
             <p class="b tc w-100">We'll add more speakers as they get confirmed.</p>
 
+            <p class="b tc w-100">It's not too late to propose your talk! The <a href="papercall.io/cfps/751/submissions/new">Call for Speakers</a>  is still open until Jan 15th 2018!</p>
+
             <div id="manurink" class="dt-row w-100 mb3">
                 <div class="dt w-100 pv2 bb b--gray">
 
