update-innovo-sponsor

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -31,6 +31,10 @@
                               <a id="sinnerschrader" class="no-underline pointer db w-30 center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
                                   <img class="grow" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
                               </a>
+                              <div class="w-50-ns center pa3">
+                              <a id="innovocloud" class="no-underline pointer db w-30 center" href="https://https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
+                                  <img class="grow" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
+                              </a>
                           </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
     <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
