--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -32,7 +32,7 @@
                                   <img class="grow" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
                               </a>
                               <div class="w-50-ns center pa3">
-                              <a id="innovocloud" class="no-underline pointer db w-30 center" href="https://https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
+                              <a id="innovocloud" class="no-underline pointer db w-30 center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
                                   <img class="grow" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
                               </a>
                           </div>
