Paul now works for AWS

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -78,10 +78,10 @@
                             Paul Johnston
                         </p>
                         <p class="f6 gray mt0">
-                            Movivo
+                            Amazon Web Services
                         </p>
                         <p class="f6" >
-                            Paul was the CTO of Movivo where he has built his entire product on serverless technologies, whilst actively blogging and regularly speaking about the experience. Paul is also one of the creators of JeffConf.
+                            Paul is Senior Developer Advocate for Serverless at AWS working in EMEA. He is former CTO of Movivo - a startup working in 20 countries to provide free top up/recharge to those who struggle to afford it and built on a fully serverless architecture (on AWS). He is a prolific blogger about Serverless on Medium. Paul has previously started startups, been a consultant CTO to a number of startups in the past decade and developed mobile products and solutions for global brands such as Sony. Paul also is a director of a community energy scheme that is aiming to take it’s community ‘off grid’ and lives a bit outside of London in Milton Keynes (there are bits of the UK that aren’t London!) with his wife and 5 kids.
                         </p>
                         <p class="f6">
                             Pronouns: he/him
