--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -3,37 +3,37 @@
 
       <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor" id="sponsors">Sponsors</h4>
                           <div class="w-50-ns center pa3">
-                              <a id="aws-sponsor-website" class="no-underline pointer db w-50 center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
-                                  <img class="grow" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
+                              <a id="aws-sponsor-website" class="no-underline pointer db center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
+                                  <img class="w-50" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
-                              <a id="microsoft-sponsor-website" class="no-underline pointer db w-40 center" href="https://azure.com/" target="_blank" title="microsoft">
-                                  <img class="grow" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
+                              <a id="microsoft-sponsor-website" class="no-underline pointer db center" href="https://azure.com/" target="_blank" title="microsoft">
+                                  <img class="w-40" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
-                              <a id="moovel" class="no-underline pointer db w-40 center" href="https://moovel.com/" target="_blank" title="moovel">
-                                  <img class="grow" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
+                              <a id="moovel" class="no-underline pointer db center" href="https://moovel.com/" target="_blank" title="moovel">
+                                  <img class="w-40" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
-                              <a id="serverless-sponsor-website" class="no-underline pointer db w-30 center" href="https://serverless.com/" target="_blank" title="Serverless">
-                                  <img class="grow" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
+                              <a id="serverless-sponsor-website" class="no-underline pointer db center" href="https://serverless.com/" target="_blank" title="Serverless">
+                                  <img class="w-30" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
-                              <a id="silpion" class="no-underline pointer db w-30 center" href="https://silpion.de/" target="_blank" title="silpion">
-                                  <img class="grow" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
+                              <a id="silpion" class="no-underline pointer db center" href="https://silpion.de/" target="_blank" title="silpion">
+                                  <img class="w-30" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
-                              <a id="sinnerschrader" class="no-underline pointer db w-30 center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
-                                  <img class="grow" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
+                              <a id="sinnerschrader" class="no-underline pointer db center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
+                                  <img class="w-30" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
                               </a>
                               <div class="w-50-ns center pa3">
-                              <a id="innovocloud" class="no-underline pointer db w-30 center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
-                                  <img class="grow" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
+                              <a id="innovocloud" class="no-underline pointer db center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
+                                  <img class="w-30" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
                               </a>
                           </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
