fixed inovo logo size
by correcting html markup

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -31,7 +31,8 @@
                               <a id="sinnerschrader" class="no-underline pointer db center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
                                   <img class="w-30" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
                               </a>
-                              <div class="w-50-ns center pa3">
+                          </div>
+                          <div class="w-50-ns center pa3">
                               <a id="innovocloud" class="no-underline pointer db center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
                                   <img class="w-30" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
                               </a>
