Anna is confirmed as speaker \o/

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -102,6 +102,33 @@
                 </div>
             </div>
 
+            <div id="annad" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+                <div class="dt w-100 pv2 bb b--gray">
+                    <div class="dtc w-20 pa2 pv3 v-mid">
+                        <img src="/imgs/anna-doubkova.jpg" alt="Photo of Anna" title="Anna Doubková" class="grow"/>
+                    </div>
+                    <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                        <p class="mb0">
+                            Anna Doubková
+                        </p>
+                        <p class="f6 gray mt0">
+                            Hive (British Gas)
+                        </p>
+                        <p class="f6" >
+                            Anna is a Javascript developer who loves working with new technologies. Currently working at Hive (British Gas), she does full-stack development to deliver a great end to end solution focused on user experience. She's a frequent speaker, runs workshops, and likes contributing to the community.
+                        </p>
+                        <p class="f6">
+                            Pronouns: she/her
+                        </p>
+                        <div class="tr">
+                            <a class="ph1 no-underline" title="Anna on Twitter" href="https://twitter.com/lithinn" target="_blank">@@include('./icon-twitter.html')</a>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
