preliminary agenda page
content follows asap

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -109,6 +109,7 @@
       @@include('./home.html')
       @@include('./call-for-speakers-workshops.html')
       @@include('./speakers.html')
+      @@include('./agenda.html')
       @@include('./venue.html')
       @@include('./diversity.html')
       @@include('./coc.html')
