--- a/src/views/header.html
+++ b/src/views/header.html
@@ -9,6 +9,7 @@
     <div class="dtc v-mid tl-ns tc pa3">
       <div onclick="changePage('home')" data-page="home" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Home</div>
       <div onclick="changePage('call-for-speakers-workshops')" data-page="call-for-speakers-workshops" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">CfP</div>
+      <div onclick="changePage('agenda')" data-page="agenda" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Agenda</div>
       <div onclick="changePage('speakers')" data-page="speakers" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Speakers</div>
       <div onclick="changePage('venue')" data-page="venue" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Venue</div>
       <div onclick="changePage('diversity')" data-page="coc" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Diversity</div>
